feat(book.service) http request wired to service

--- a/src/app/books/book-list/book-list.component.html
+++ b/src/app/books/book-list/book-list.component.html
@@ -1,3 +1,17 @@
-<p>
-  book-list works!
-</p>
+<div>
+  <div>
+    <form class="form-group" (ngSubmit)="searchBooks()">
+      <input 
+        [(ngModel)]="searchTerm"
+        name="searchTerm"
+        type="text" 
+        placeholder="Searth term" 
+        class="form-control" 
+        required/>        
+      <button class="btn btn-success" type="submit">SEARCH</button>        
+    </form>
+  </div>
+  <div *ngFor="let book of books">
+    <app-book-list-element></app-book-list-element>
+  </div>
+</div>
