--- a/src/app/books/pager/pager.component.html
+++ b/src/app/books/pager/pager.component.html
@@ -1,4 +1,4 @@
-<div class="row pull-right" *ngIf="pages.length > 1">
+<div class="row right-align" *ngIf="pages.length > 1">
   <button class="btn btn-xs" (click)="getPage(1)">First</button>
   <button class="btn btn-xs" (click)="getPrevPage()">Prev</button>
   <button
