--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,9 +1,9 @@
-<div>
-  <div>Shopping Cart</div>
+<div *ngIf="inCartBooks.length > 0">
+  <div class="book-title">Shopping Cart</div>
   <div *ngFor="let cartItem of inCartBooks">
       <app-cart-item [item]="cartItem"></app-cart-item>
   </div>
-  <div *ngIf="inCartBooks.length > 0">
+  <div>
     <button class="btn btn-sm btn-danger" (click)="emptyCart()">Empty Cart</button>
   </div>
 </div>
