--- a/src/app/books/book-detail/book-detail.component.html
+++ b/src/app/books/book-detail/book-detail.component.html
@@ -1,3 +1,28 @@
-<p>
-  book-detail works!
-</p>
+<div class="row" style="padding: 5%">
+  <div class="col-xs-5">
+      <img [src]="book.volumeInfo.imageLinks.thumbnail"/>
+  </div>
+  <div class="col-xs-7">
+    <div class="book-title">{{ book.volumeInfo.title }}</div>
+    <div>{{ book.volumeInfo.authors.join(', ') }}</div>
+    <div>{{ book.volumeInfo.publishedDate | date }}</div>
+    <br/>
+    <div>Categories: {{ book.volumeInfo.categories.join(', ') }}</div>
+    <div *ngIf="book.volumeInfo.averageRating">Rating: {{ book.volumeInfo.averageRating }} ({{ book.volumeInfo.ratingsCount }})</div>
+    <div *ngIf="showFullDescription">Description: {{ book.volumeInfo.description }}
+        <span
+          class="clickable"
+          style="color: blue"
+          (click)="showFullDescription = false"
+          *ngIf="book.volumeInfo.description.length > 100"> less...</span>        
+    </div>
+    <div *ngIf="!showFullDescription">Description: {{ shortDescription }}
+      <span class="clickable" style="color: blue" (click)="showFullDescription = true">...more</span>
+    </div>
+
+    <div class="row align-bottom button-row">
+      <button class="btn btn-sm btn-success" (click)="addToCart()">Add to cart</button>
+      <button class="btn btn-sm btn-info" (click)="close()">Close</button>
+    </div>
+  </div>
+</div>
