--- a/src/app/books/book-list-element/book-list-element.component.html
+++ b/src/app/books/book-list-element/book-list-element.component.html
@@ -1,16 +1,17 @@
-<div class="row">
-  <div class="col-sm-4">
+<div class="row" style="padding-bottom: 2%;">
+  <div class="col-xs-4">
     <img [src]="book.volumeInfo.imageLinks.smallThumbnail" width="60%"/>
   </div>
-  <div class="col-sm-8">
-    <div>
-        {{ book.volumeInfo.title }}        
+  <div class="col-xs-8">
+    <div class="book-title" (click)="showDetails()">
+      {{ book.volumeInfo.title }}
     </div>
     <div>
-        <button class="btn btn-info">Details</button>        
+      {{ book.volumeInfo.authors.join(', ') }}
     </div>
-    <div>
+    <div class="row button-row">
         <button class="btn btn-success" (click)="addToCart()">Add to cart</button>        
+        <button class="btn btn-info" (click)="showDetails()">Details</button>
     </div>
   </div>
 </div>
