feat(pager.component): page size is changeable

--- a/src/app/books/pager/pager.component.html
+++ b/src/app/books/pager/pager.component.html
@@ -1,4 +1,7 @@
 <div class="row right-align" *ngIf="pages.length > 1">
+  <select [(ngModel)]="pageSize">
+    <option *ngFor="let size of [5, 10, 20, 40]" [ngValue]="size">{{ size }}</option>
+  </select>
   <button class="btn btn-xs" (click)="getPage(1)">First</button>
   <button class="btn btn-xs" (click)="getPrevPage()">Prev</button>
   <button
